--- a/postu/templates/base.html
+++ b/postu/templates/base.html
@@ -1,40 +1,85 @@
-{% load article_tags %}
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta name="language" content="en-US" />
-<meta name="keywords" content="{% block meta-keywords %}{% endblock %}" />
-<meta name="description" content="{% block meta-description %}{% endblock %}" />
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <!-- Le styles -->
+    <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet">
+     <style type="text/css">
+      body {
+        padding-top: 60px;
+        padding-bottom: 40px;
+      }
+      .sidebar-nav {
+        padding: 9px 0;
+      }
+    </style>
+    </style>
+    <link href="{{ STATIC_URL }}css/bootstrap-responsive.css" rel="stylesheet">
+
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <script src="{{ STATIC_URL }}js/jquery-1.8.0.min.js"></script>
+    <script src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
 
 <title>My Site - {% block title %}Welcome{% endblock %}</title>
 {% block extra-head %}{% endblock %}
 </head>
 <body>
-<h1><a href="/">My Site</a></h1>
-{% block content %}{% endblock %}
-{% block sidebar %}
-    {% block recent_articles %}
-    <li>
-        <h2>Recent Articles</h2>
-        {% get_articles 10 as recent %}
-        {% for article in recent %}
-        {% if forloop.first %}<ul>{% endif %}
-            <li><a href="{{ article.get_absolute_url }}" title="Read this article">{{ article.title }}</a></li>
-        {% if forloop.last %}</ul>{% endif %}
-        {% endfor %}
-    </li>
-    {% endblock %}
 
-    {% block article_tags %}
-    <li>
-        <h2>Tag Cloud</h2>
-        {% tag_cloud %}
-    </li>
-    {% endblock %}
-{% endblock %}
+<div class="navbar navbar-inverse navbar-fixed-top">
+ <div class="navbar-inner">
+   <div class="container-fluid">
+     <a class="brand" href="/">PostU</a>
+     <div class="nav-collapse collapse">
+       
+       <ul class="nav">
+       {% for navitem in navlist %}
+        <li {% ifequal page navitem %} class="active" {% endifequal %}><a href="/{{ navitem }}">{{ navitem|capfirst}} </a></li>
+       {% endfor %}
+       </ul>
+       
+       <p class="navbar-text pull-right">
+         Logged in as <a href="#" class="navbar-link">Username</a>
+       </p>
+     </div><!--/.nav-collapse -->
+   </div>
+ </div>
+</div>
+ 
+{% ifnotequal page 'home'%}  
 
-{% block footer %}
-<p>Copyright &copy; {% now "Y" %} Me. All rights reserved.</p>
-{% endblock %}
+<div class="container">
+	<div class="hero-unit">
+	    <h1>{{ page|capfirst }}</h1>
+		{% block content %}
+		{% endblock %}
+	</div>
+</div>
+
+{% else%}
+
+	{% block main %} {% endblock %}
+	
+	{% block leftside %}{% endblock %}
+	
+	{% block rightside %}{% endblock %}
+
+{% endifnotequal%}
+
+
+
+
+
+<footer class="footer">
+<div class="container">
+  <div class="navbar">
+    <p class="pull-right"><a href="#">Back to top</a></p>
+    <p>Designed by <a href="/">@feefk</a></p>
+  </div>
+</div>  
+</footer>
+    
 </body>
 </html>
