--- a/postu/templates/home/home.html
+++ b/postu/templates/home/home.html
@@ -1,13 +1,60 @@
 {% extends 'base.html' %}
 
-{% block main %}
-
-<div class="container">
-    <div class="hero-unit">
-        <h1>{{ page|capfirst }}</h1>
-        
-    </div>
-</div>
+{% block extra-head %}
+<script type="text/javascript">
+<!--
+//-->
+</script>
 
 {% endblock %}
- 
+{% block content %}
+
+<div class="container">
+    <div class="hero-unit" >
+       
+        
+    </div> 
+</div>
+
+<div class="container-fluid">
+   <div class="row-fluid">
+        
+        <div class="span2">
+          <div class="well sidebar-nav">
+            <ul class="nav nav-list">
+              <li class="nav-header">Sidebar List</li>
+              <li class="active"><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li class="nav-header">Sidebar</li>
+              <li><a href="#">Link</a></li>
+            </ul>
+          </div><!--/.well -->
+        </div><!--/span-->
+
+	    <div class="span8" >
+	       <div class="hero-unit" id="text-center">
+	          <div id="load-img" >
+	          ee
+	          </div>
+	       </div>
+	    </div><!--/span-->
+     
+        <div class="span2">
+          <div class="well sidebar-nav">
+            <ul class="nav nav-list">
+              <li class="nav-header">Sidebar List</li>
+              <li class="active"><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
+              <li class="nav-header">Sidebar</li>
+              <li><a href="#">Link</a></li>
+            </ul>
+          </div><!--/.well -->
+        </div><!--/span-->      
+     
+  </div><!--/.well -->
+</div><!--/span--> 
+{% endblock %}
+
+
+
+
